# systemregister

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ANALYSIS.md  BACKLOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HANDOVER.md  QUESTIONS.md  README.md  System.xlsx  TESTPLAN.md  TESTRESULTAT.md  docker-compose.yml
backend/: Dockerfile.dev  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0000_initial_schema.py  0001_enable_rls_multi_org.py  0002_gin_index_extended_attributes.py  0003_fix_rls_null_bypass.py  0004_consolidate_integration_criticality.py  0005_not_null_criticality_lifecycle.py  0006_parent_org_id_ondelete_set_null.py  (+10 more)
backend/app/: main.py
backend/tests/: conftest.py  factories.py  test_approvals.py  test_archimate_export.py  test_audit.py  test_business_capabilities.py  test_business_processes.py  test_business_roles.py  test_classifications.py  test_compliance.py  test_components.py  test_contracts.py  test_crud_flows.py  test_data_quality_compliance.py  test_diagrams.py  test_edge_cases_security.py  test_employment_templates.py  test_export.py  test_gdpr.py  test_health.py  test_import.py  test_information_assets.py  test_integrations.py  test_integrations_advanced.py  test_kravspec_category1_6.py  test_kravspec_category7_12.py  test_modules.py  test_multiorg_security.py  test_negative.py  test_notifications.py  test_objekt.py  test_org_units.py  test_organizations.py  test_owners.py  test_performance.py  test_performance_stress.py  test_positions.py  test_regression.py  test_reports.py  test_rls.py  (+12 more)
(+223 files in other folders)
